test/sema/struct_member_redeclared.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: int,
  x: int,
  // CHECK: [[# @LINE - 1 ]]:3: error: field 'x' is already declared
}

fn main() -> void {}
